Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120202

Can't force qtwayland applications using wayland text input

XMLWordPrintable

    • 8596998cb (dev), fc3df6d3d (dev)

      The qtwayland will check QT_IM_MODULE env variant, if the env var is not empty, the qtwayland will using the input context of from QT_IM_MODULE. However, under normal circumstances, the wayland desktop environment will use XWayland to support X11 program running, so the Wayland desktop environment usually sets the QT_IM_MODULE environment variable the same as the X11 desktop environment. This will cause the Qt application to never use the wayland input context.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            zccrs JiDe Zhang
            zccrs JiDe Zhang
            Votes:
            1 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes