src/plugins/platforms/wasm/qwasmintegration.cpp
@@ -222,12 +222,12 @@ QPlatformOpenGLContext *QWasmIntegration::createPlatformOpenGLContext(QOpenGLCon
 
 void QWasmIntegration::initialize()
 {
-    if (qgetenv("QT_IM_MODULE").isEmpty() && touchPoints < 1)
+    auto icStrs = QPlatformInputContextFactory::requested();
+    if (icStrs.isEmpty() && touchPoints < 1)
         return;
 
-    QString icStr = QPlatformInputContextFactory::requested();
-    if (!icStr.isNull())
-        m_inputContext.reset(QPlatformInputContextFactory::create(icStr));
+    if (!icStrs.isEmpty())
+        m_inputContext.reset(QPlatformInputContextFactory::create(icStrs));
     else
         m_inputContext.reset(new QWasmInputContext());
 }
